# axum_template

./: Cargo.toml
src/: ctx.rs  error.rs  log.rs  main.rs
src/model/: location.rs
src/web/: mod.rs  mw_auth.rs  routes_auth.rs  routes_location.rs
